fix the Z-index issue

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -165,7 +165,7 @@ nav a:hover {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
@@ -201,7 +201,7 @@ nav a:hover {
   font-weight: bold;
   font-size: 36px;
   user-select: none;
-  z-index: 2;
+  z-index: 3;
 }
 
 .close-btn {
